# Improved-lipsyncing

./: .gitignore  README.md  diffusion_enhance.py  inference.py  main.py  pyproject.toml  requirements.txt  test_audio_extract.aac
config/: __init__.py  device_config.py
face_detection/: api.py
face_detection/detection/sfd/: bbox.py
