[project]
name = "wav2lip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gfpgan>=1.3.0",
    "librosa>=0.9.0",
    "numba>=0.53.0",
    "numpy>=1.20.0",
    "opencv-contrib-python>=4.5.0",
    "opencv-python>=4.5.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "tqdm>=4.45.0",
]
