[project]
name = "wav2lip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=23.0.0",
    "coremltools>=7.0",
    "ffmpeg-python>=0.2.0",
    "gfpgan>=1.3.0",
    "librosa>=0.10.0",
    "mlx>=0.4.0",
    "numba>=0.53.0",
    "numpy>=1.24.0",
    "opencv-contrib-python>=4.8.0",
    "opencv-python>=4.8.0",
    "pytest>=7.0.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
]
